scribble-assertions/src/test/resources/good/extensions/annotations/RecWithAnnot.scr
module good.extensions.annotations.RecWithAnnot;


type <java> "java.lang.Integer" from "rt.jar" as Int;
type <java> "java.lang.Long" from "rt.jar" as Long;

// Recursion with Annotations (Simple)
global protocol ProtSimple(role C, role S)
{
rec Loop {
	ADD(x:Int) from C to S;
	continue Loop; 
	//ADD(y:Integer) from C to S;
	} 
}

// Recursion with Annotations (Complicated)
global protocol ProtComplex(role A, role B, role C)
{
rec Loop {
	choice at A {
		ADD(x:Int) from A to B;  
		ADD(z:Int) from B to C;
		 
	} or {
		RES(y:Int) from A to B;
		RES(z:Int) from B to C; 
		continue Loop;
		}
	}
	
	RES(z) from B to C;   // FIXME: only need z on all exit loops -- motivation for model checking based WF
}
