scribble-assertions/src/test/resources/bad/extensions/assertions/RecWithAssertions2.scr
module bad.extensions.assertions.RecWithAssertions2;


type <java> "java.lang.Integer" from "rt.jar" as Int;

// assrt-core version of bad.extensions.assertions.RecWithAssertions
global protocol Proto1(role A, role B, role C)
{
	rec Loop
	{
		choice at A
		{
			MSG1(x:Int) from A to B;  @(x < 10);
			MSG3(z:Int) from B to C;  @(z < y);
		}
		or
		{
			MSG2(y:Int) from A to B;  @(y > 10);
			MSG4(z1:Int) from B to C;  @(z1 < y);  // Artificial
			continue Loop; 
		}
	}
}
